edit: name, button after true end

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Phiêu Lưu Văn Bản</title>
+    <title>Giấc mơ của pé I</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="game-container">
-        <h1 id="context-title">Cuộc Phiêu Lưu Kỳ Bí</h1>
+        <h1 id="context-title">Giấc mơ của pé I</h1>
         <div id="start-screen">
-            <p>Chào mừng đến với trò chơi phiêu lưu văn bản. Bạn sẽ đối mặt với những lựa chọn khác nhau sẽ quyết định số phận của nhân vật.</p>
-            <p>Hãy sẵn sàng cho cuộc hành trình đầy thách thức và bí ẩn!</p>
+            <p>Chào cả nhà iu cụa eim ạ. Đây là bản đầu tiên em thử làm game cốt truyện dựa trên những giấc mơ của mình. Mọi người có thể hỗ trợ tinh thần em bằng cách follow page <b>https://www.facebook.com/profile.php?id=100088420134717 </b> ạ :3 </p>
+            <p>Game có 5 cốt truyện. Chúc cả nhà vui vẻ ❤️‍🔥 </p>
             <button id="start-button" class="btn">Bắt Đầu Phiêu Lưu</button>
         </div>
         
@@ -19,8 +19,7 @@
             <p id="context-description" class="context-description"></p>
             <div id="choices" class="choices"></div>
             <div id="ending" class="ending" style="display: none;">
-                <h2>Kết Thúc</h2>
-                <button id="restart-button" class="restart-btn">Chơi lại từ đầu</button>
+                <button id="restart-button" class="restart-btn">Sống lại lần nữa</button>
             </div>
         </div>
     </div>
