edit: break lines

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div class="game-container">
         <h1 id="context-title">Giấc mơ của pé I</h1>
         <div id="start-screen">
-            <p>Chào cả nhà iu cụa eim ạ. Đây là bản đầu tiên em thử làm game cốt truyện dựa trên những giấc mơ của mình. Mọi người có thể hỗ trợ tinh thần em bằng cách follow page <b>https://www.facebook.com/profile.php?id=100088420134717 </b> ạ :3 </p>
+            <p >Chào cả nhà iu cụa eim ạ. Đây là bản đầu tiên em thử làm game cốt truyện dựa trên những giấc mơ của mình.</p>
+            <p style="word-wrap: break-word; overflow-wrap: break-word;">Chào cả nhà iu cụa eim ạ. Đây là bản đầu tiên em thử làm game cốt truyện dựa trên những giấc mơ của mình. Mọi người có thể hỗ trợ tinh thần em bằng cách follow page <a href="https://www.facebook.com/profile.php?id=100088420134717" target="_blank">https://www.facebook.com/profile.php?id=100088420134717</a> ạ :3 </p>
             <p>Game có 5 cốt truyện. Chúc cả nhà vui vẻ ❤️‍🔥 </p>
             <button id="start-button" class="btn">Bắt Đầu Phiêu Lưu</button>
         </div>
